@@ -1,24 +1,79 @@
 <?xml version="1.0"?>
 
-<node name="imageViewer" author="mesh" type="image">
-	<help>Single image viewer </help>
-	<input>
-    <property name="image" type="image" default="" subtype="file" range="All files=*.*:TIFF=*.tif:PNG=*.png:JPEG=*.jpg"/>		
-	</input>
-	<output>
-	</output>
-	<control_code>
+<node name="imageViewer" author="mesh" type="image" version="2.0">
+  <help>Image viewer with dynamicaly added inputs</help>
+  <input>
+    <property name="add_image" label="Image input" btext="Add" type="control" default="" provider="attribute" subtype="button"> 
+    <code>
 <![CDATA[
-#$(output) = $(input)
-#import core.imageNode
-#import code.nodeParam
+#print ":: Hello from (%s) XML control param code !!!" % self.label
+from core.params.imageNodeParam import ImageNodeParam
+lastNonremovableParam = node.getInputParamByName ( 'selector' )
+lastNonremovableParamIdx = node.inputParams.index ( lastNonremovableParam )
+lastParamIdx = len ( node.inputParams ) 
+suffixIdx = lastParamIdx - lastNonremovableParamIdx
 
-print ":: Hello from %s XML code !!!" % self.label
-self.imageName = self.getInputParamValueByName ( 'image' ) 
+newParam = ImageNodeParam ()
+newParam.setup ( 'image' + str ( suffixIdx ), '', '', '' )
+newParam.value = ''
+newParam.default = ''
+newParam.subtype="file"
+newParam.range="All files=*.*:TIFF=*.tif:PNG=*.png:JPEG=*.jpg"
+newParam.removable = True
+node.addInputParam ( newParam )
+node.updateNodeParams ()
 
 
 ]]>
-	</control_code>
-	<code>
-	</code>
+    </code>   
+    </property>
+    <property name="image" label="Image" type="image" default="" subtype="file" range="All files=*.*:TIFF=*.tif:PNG=*.png:JPEG=*.jpg"/>
+    <property name="selector" label="Select input" type="string" provider="attribute" subtype="selector"
+    default="image"
+    range="Image=image"/> 
+  
+  </input>
+
+  <output>
+  </output>
+  <control_code>
+<![CDATA[
+#print ":: Hello from (%s) XML control_code !!!" % self.label
+selectedInput = self.getInputParamByName ( 'selector' ).value
+print '* selectedInput = %s' % selectedInput 
+self.imageName = self.getInputParamValueByName ( selectedInput )
+
+]]>
+  </control_code>
+  <event_code>
+    <handler name="ParamLabelRenamed">
+<![CDATA[
+#print ":: Hello from ParamLabelRenamed handler"  
+#print ":: param.label = %s oldName = %s" % ( param.label, oldLabel )
+selector = self.getInputParamByName ( 'selector' ) 
+selector.renameItemInRange ( oldLabel, param.label )    
+
+]]>   
+    </handler>  
+    <handler name="ParamAdded">
+<![CDATA[
+#print ":: Hello from ParamAdded handler" 
+#print ":: param.label = %s type = %s" % ( param.label, param.type )
+selector = self.getInputParamByName ( 'selector' )
+selector.range += ':%s=%s' % ( param.label, param.name ) 
+
+]]>
+    </handler> 
+    <handler name="ParamRemoved">
+<![CDATA[
+#print ":: Hello from ParamRemoved handler" 
+#print ":: param.label = %s type = %s" % ( param.label, param.type ) 
+selector = self.getInputParamByName ( 'selector' ) 
+selector.removeItemFromRange ( param.label )    
+
+]]>      
+    </handler> 
+  </event_code>  
+  <code>
+  </code>
 </node>
