@@ -1,45 +1,0 @@
-<?xml version="1.0"?>
-
-<node name="imageSelector" author="mesh" type="image">
-	<help>Image viewer with additional inputs</help>
-	<input>
-    <property name="selector" label="Select image" type="string" provider="attribute" subtype="selector"
-      default="image"
-      range="image:image1:image2:image3:image4:image5:image6:image7"/>
-    
-    <property name="image" type="image" default="" subtype="file" range="All files=*.*:TIFF=*.tif:PNG=*.png:JPEG=*.jpg"/>
-    
-    <property name="image1" type="image" default="" subtype="file" range="All files=*.*:TIFF=*.tif:PNG=*.png:JPEG=*.jpg"/>	
-    <property name="image2" type="image" default="" subtype="file" range="All files=*.*:TIFF=*.tif:PNG=*.png:JPEG=*.jpg"/>	
-    <property name="image3" type="image" default="" subtype="file" range="All files=*.*:TIFF=*.tif:PNG=*.png:JPEG=*.jpg"/>
-    <property name="image4" type="image" default="" subtype="file" range="All files=*.*:TIFF=*.tif:PNG=*.png:JPEG=*.jpg"/>
-    <property name="image5" type="image" default="" subtype="file" range="All files=*.*:TIFF=*.tif:PNG=*.png:JPEG=*.jpg"/> 
-    <property name="image6" type="image" default="" subtype="file" range="All files=*.*:TIFF=*.tif:PNG=*.png:JPEG=*.jpg"/>
-    <property name="image7" type="image" default="" subtype="file" range="All files=*.*:TIFF=*.tif:PNG=*.png:JPEG=*.jpg"/>
-
-	</input>
-	<output>
-	</output>
-	<control_code>
-<![CDATA[
-#$(output) = $(input)
-#import core.imageNode
-#import code.nodeParam
-
-print ":: Hello from (%s) XML code !!!" % self.label
-
-if self.getInputParamByName ( 'selector' ).value == 'image': self.imageName = self.getInputParamValueByName ( 'image' ) 
-if self.getInputParamByName ( 'selector' ).value == 'image1': self.imageName = self.getInputParamValueByName ( 'image1' ) 
-if self.getInputParamByName ( 'selector' ).value == 'image2': self.imageName = self.getInputParamValueByName ( 'image2' ) 
-if self.getInputParamByName ( 'selector' ).value == 'image3': self.imageName = self.getInputParamValueByName ( 'image3' )
-if self.getInputParamByName ( 'selector' ).value == 'image4': self.imageName = self.getInputParamValueByName ( 'image4' ) 
-if self.getInputParamByName ( 'selector' ).value == 'image5': self.imageName = self.getInputParamValueByName ( 'image5' )
-if self.getInputParamByName ( 'selector' ).value == 'image6': self.imageName = self.getInputParamValueByName ( 'image6' )
-if self.getInputParamByName ( 'selector' ).value == 'image7': self.imageName = self.getInputParamValueByName ( 'image7' )
-
-
-]]>
-	</control_code>
-	<code>
-	</code>
-</node>
